Fix overlapping footer

--- a/styles/style.css
+++ b/styles/style.css
@@ -148,8 +148,6 @@ footer {
   font-size: 0.8rem;
   margin-top: 1rem;
   padding: 1rem;
-  position: absolute;
-  bottom: 0;
 }
 
 /*& Media queries */
